# razer-joro

./: .gitignore  ARCHITECTURE.md  BLE_RECOVERY.md  CHANGELOG.md  Cargo.toml  WORKPLAN.md  _status.md  build.ps1  config.example.toml  razer-joro-synapse-replacement.md
.cargo/: config.toml.example
assets/: dump_system_icons.ps1  extract_osk_icon.ps1  gen_icon.py  settings.html
captures/: all_writes_window.py  bt_hci.txt  bt_hci.xml  bt_hci_effects.xml  bt_hci_lr.xml  diff_packets.py  dump_cmd0d.py  dump_frame.py  dump_full_cmd0d.py  joro_pairing2.pcap  joro_pairing3.pcap  joro_pairing4.pcap  joro_pairing5.pcap  joro_pairing6.pcap  joro_pairing7.pcap  joro_pairing8.pcap  joro_pairing_full.pcap  joro_pairing_scan.pcap  parse_synapse_f4.py  start_captures.ps1  start_daemon_capture.ps1  start_hypershift_capture.ps1  start_mode_capture.ps1
docs/: ble-reverse-engineering.md
proto/: commands.py  consumer_discover.py  enumerate.py  explore_persistent.py  find_capslock.py  find_capslock_v2.py  map_all_keys.py  razer_packet.py  requirements.txt  scan_keymap.py  scan_keymap_full.py  test_lighting.py  test_persistent.py  usb_transport.py  validate_keymap.py
scripts/: ble_auth_probe.py  ble_auth_probe2.py  ble_class10_probe.py  ble_device_mode_probe.py  ble_direct_control.py  ble_gatt_enum.py  ble_proto30_8byte.py  ble_proto30_probe.py  ble_proto30_test.py  ble_quick_test.py  ble_test_command.py  bt_hci_capture.py  bt_remove.ps1  check_times.ps1  frida_attach_all.py  frida_ble_hook.js  frida_dump_modules.py  frida_dump_node_exports.py  frida_enum_ble_exports.py  (+13 more)
src/: ble.rs  (+12 more)
(+15 files in other folders)
