[package]
name = "joro-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
rusb = "0.9"
tray-icon = "0.19"
winit = { version = "0.30", features = ["rwh_06"] }
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_Security",
] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png"] }

[profile.release]
strip = true
lto = true
