[package]
name = "joro-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
rusb = "0.9"
hidapi = "2"
tray-icon = "0.19"
winit = { version = "0.30", features = ["rwh_06"] }
wry = "0.55"
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_Security",
    "Devices_Bluetooth",
    "Devices_Bluetooth_Advertisement",
    "Devices_Bluetooth_GenericAttributeProfile",
    "Devices_Enumeration",
    "Foundation",
    "Foundation_Collections",
    "Storage_Streams",
] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ctrlc = "3"
image = { version = "0.25", default-features = false, features = ["png", "ico"] }

[profile.release]
strip = true
lto = true
